Kubernetes_Operations/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: www.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port: 
                number: 80
